BrndBot/web/css/style_detail_overlay-1.css
/* ... */
.saved-post-header-detail{
    background-color: #FFFFFF;
    padding-top:45px;
    padding-left: 75px;
    padding-right: 75px;
    padding-bottom: 30px;
    float: left;
    width: 100%;
    box-sizing: border-box;
    width: 100%;


}

.saved-post-preview-detail{
     width:100%;
    background-color: #F9F9F9;
    box-sizing: border-box; 
    float: left;
    padding-top: 30px;
    padding-bottom:105px;

}

.saved-note-detail{
     width:100%;
    background-color: #F9F9F9;
    box-sizing: border-box; 
    float: left;
    padding-top: 30px;
    padding-left:75px;
    padding-right: 75px;
    padding-bottom:105px;

}

.fields-note-detail{
    width:100%;
    background-color: #FFFFFF;
    box-sizing: border-box; 
    float: left;
    padding-top: 0px;
    padding-left:75px;
    padding-right: 75px;
    padding-bottom:160px;
    height: 76vh;

}
.saved-email-preview-detail{
    width: 80%;
    background-color: #F9F9F9;
    box-sizing: border-box;
    float: left;
    padding-top: 0px;
    padding-bottom: 50px;
    position: relative;
    left: 100px;
    right: 100px;
    
}
.emailcontentiframetag{
    width: 100%;
    height: 150vh;
    position: relative;
    bottom: -100px;
    border: 0px;
    top: 0px;
}
.Facebook-preview{
    width:494px;
    height: 600px;
    margin: auto;
    padding:12px 12px 0px 12px;
    float: none;
    border: 1px solid rgb(223, 224, 228);
    border-radius: 3px;
    background-color: #FFFFFF;
    
}
.twitter-post-preview{
     width:494px;
    height:340px !important;
    margin: auto;
    padding:12px 12px 0px 12px;
    float: none;
    border: 1px solid rgb(223, 224, 228);
    border-radius: 3px;
    background-color: #FFFFFF;
}

.Facebook-preview-header{
    width:470px;
    height:40px;
    float: left;
     margin-bottom: 11px;
  
}

.Facebook-preview-profpic{
    width: 40px;
    height: 40px;
    margin-right: 8px;
    float: left;
    background-color: beige;
}
.Facebook-preview-profpic > img {
    width: 100%;
    height: 100%;
}
.Facebook-preview-name-container{
    width:422px;
    height: 100%;
    float: inherit;
  
}

Facebook-preview-name{
    font-family: helvetica, arial;
    font-weight: bold;
    line-height: 19.32px;
    color: rgb(59, 89, 152);
    font-size: 14px;
    float: inherit;
}

.Facebook-preview-usercontent{
    font-family: helvetica, arial;
    font-weight: normal;
    line-height: 19.32px;
    color: rgb(20, 24, 35);
    font-size: 14px;
    float: left;
}

.Facebook-link-container{
    box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 0px 1.5px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 1px 0px;
    color: rgb(20, 24, 35);
    border: 1px solid rgba(0, 0, 0, 0.0980392);
    float: left;
    width:100%;
    margin-top: 10px;

}

.Facebook-preview-image{
    width:100%;
    height: 244px;
    background-color: #5CC2A5;
    float: left;
}
.Facebook-preview-image > img {
    width: 100%;
    height: 100%;
    min-height: 244px;
    background-color: aqua;
    float: left;
}

.Facebook-preview-link-container{
    width: 100%;
    padding: 10px 12px 10px 12px;
    float: left;
    box-sizing: border-box;
    overflow: hidden;
}

.Facebook-preview-link-title{
    font-family: Georgia, 'lucida grande', tahoma;
    font-size: 18px;
    color: rgb(20, 24, 35);
    font-weight: 500;
    line-height: 22px;
    margin-bottom: 5px;
    
}

.Facebook-preview-link-url{
    color: rgb(145, 151, 163);
    direction: ltr;
    display: block;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 16.08px;
    padding-top: 9px;
    margin-bottom: 5px;

}

.Facebook-preview-link-description{
    color: rgb(20, 24, 35);
    direction: ltr;
    display: block;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 16px;
    max-height: 80px;
    overflow-x: hidden;
    overflow-y: hidden;
    word-wrap: break-word;
    zoom: 1;
    text-overflow: ellipsis;
}

/*/\/\/\/\/\/\/\/\/\/ \/\\/\/\ TWITTER/\/\/\/\/\/\/\/\/\/\/\/\/*/

.Twitter-preview{
    width:564px;
    height: 600px;
    margin: auto;
    padding:9px 12px 20px 12px;
    float: none;
    border: 1px solid rgb(223, 224, 228);
    border-radius: 3px;
    background-color: #FFFFFF;
    
}

.Twitter-inner{
    width:506px;
    height: 100%;
    float: none;
    background-color: #FFFFFF;
    box-sizing: border-box;
    
}

.Twitter-left-content{
    width:50px;
    height: 100%;
    float: none;
    background-color: #FFFFFF;
    box-sizing: border-box;
    
}

.Twitter-preview-header{
    float: left;
  
}

.Twitter-preview-profpic{
    width: 40px;
    height: 40px;
    margin-right: 8px;
    float: left;
    background-color: beige;
}

.Twitter-preview-name-container{
    float: inherit;
  
}

.Twitter-preview-name{
    font-family: helvetica, arial, sans-serif;
    font-weight: bold;
    line-height: 18px;
    color: rgb(41, 47, 51);
    font-size: 14px;
    margin-right: 5px;
    
}

.Twitter-handle{
    font-family: helvetica, arial;
    line-height: 18px;
    color: rgb(136, 153, 166);
    font-size: 13px;

}

.Twitter-preview-usercontent{
    font-family: helvetica, arial;
    font-weight: normal;
    line-height: 18px;
    color: rgb(41, 47, 51);
    font-size: 14px;
    float: left;
}

.Facebook-link-container{
    box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 0px 1.5px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 1px 0px;
    color: rgb(20, 24, 35);
    border: 1px solid rgba(0, 0, 0, 0.0980392);
    float: left;
    width:100%;
    margin-top: 10px;

}

.Twitter-preview-image{
    width:506px;
    height: 268px;
    margin-top: 10px;
    border-radius: 5px;
    background-color: #5CC2A5;
}

.Facebook-preview-link-container{
    width: 100%;
    padding: 10px 12px 10px 12px;
    float: left;
    box-sizing: border-box;
    overflow: hidden;
}

.Facebook-preview-link-title{
    font-family: Georgia, 'lucida grande', tahoma;
    font-size: 18px;
    color: rgb(20, 24, 35);
    font-weight: 500;
    line-height: 22px;
    margin-bottom: 5px;
    
}
/* ... */

